# AI_CHATBOT

./: README.md  app.py  pyproject.toml  requirements.txt
notebookk/: jupyter_book.ipynb
prompt/: prompt_template.py
